fixed external linking using Link, fixed z-index issue with slide out and touch issue with sliding back in

--- a/src/components/CategoryNav/Menu.scss
+++ b/src/components/CategoryNav/Menu.scss
@@ -19,6 +19,10 @@
     &.hide {
         display: none;
     }
+
+	> .root {
+		display: block;
+	}
 }
 
 @media screen and (width >= $screen-md-min) {
