--- a/src/components/CategoryNav/MenuItem.scss
+++ b/src/components/CategoryNav/MenuItem.scss
@@ -94,7 +94,7 @@
             > div {
                 position: relative;
                 top: 0;
-                display: block;
+                display: block !important;
                 padding: 0;
                 background-color: transparent;
 
