--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,7 +6,7 @@
     margin: 0;
     font-family: "proxima-nova-condensed", sans-serif;
     color: $footer-color;
-    background: url('https://storage.googleapis.com/aries-website/site-assets/footerBackground.png');
+    background: url('/img/footerBackground.png');
 
     h4 {
         color: $white-base;
